Implement all the changes